--- a/Index.html
+++ b/Index.html
@@ -9,8 +9,8 @@
 <body>
     <header class="inicio">
         <nav class="menu">
-            <a href="#">Pagina 1</a>
-            <a href="#">Pagina 2</a>
+            <a href="Index.html">Pagina 1</a>
+            <a href="/HTML/Pagina2.html">Pagina 2</a>
             <a href="#">Pagina 3</a>
             <a href="#">Pagina 4</a>
             <a href="#">Pagina 5</a>
@@ -131,5 +131,4 @@
         <script src="/JS/ejercicio5.js"></script>
     </div>
 </body>
-
 </html>
