--- a/HTML/Pagina2.html
+++ b/HTML/Pagina2.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="">
-    <title>Document</title>
-</head>
-<body>
 
+<head>
+    <title>EJERCICIOS JS</title>
+    <link rel="stylesheet" href="/CSS/estilos.css">
+</head>
+
+<body>
+    <header class="inicio">
+        <nav class="menu">
+            <a href="../Index.html">Pagina 1</a>
+            <a href="/HTML/Pagina2.html">Pagina 2</a>
+            <a href="#">Pagina 3</a>
+            <a href="#">Pagina 4</a>
+            <a href="#">Pagina 5</a>
+            <a href="#">Pagina 6</a>
+            <a href="#">pagina 7</a>
+        </nav>
+        <section class="inicio-contenedor contenedor">
+            <h1 class="inicio-titulo">FUNDAMENTOS DE PROGRAMACION JAVA SCRIPT</h1>
+            <p class="inicio-parrafo">EJERCICIOS DEL 6 AL 10</p>
+        </section>
+    </header>
+    <div class="contenedor">
+        <div id="Ejercicio6">
+            <h2 class="subtitulo">Ejercicio 6</h2>
+            <section>
+                <h3>Escribir un programa que nos indique si la letra ingresada es vocal o
+                    consonante
+                </h3>
+                <a href="#Ejercicio6" id="boton6" class="btn">¡Ejecuta ejercicio6!</a>
+                <p>Letra: </p>
+                <p id="letra"></p>
+                <p id="resultado6"></p>
+            </section>
+            <script src=""></script>
+        </div>
+    </div>
 </body>
 
 </html>
