--- a/HTML/Pagina2.html
+++ b/HTML/Pagina2.html
@@ -32,9 +32,73 @@
                 <a href="#Ejercicio6" id="boton6" class="btn">¡Ejecuta ejercicio6!</a>
                 <p>Letra: </p>
                 <p id="letra"></p>
-                <p id="resultado6"></p>
+                <p id="resultado6">Resultado:</p>
             </section>
-            <script src=""></script>
+            <script src="/JS/ejercicio6.js"></script>
+        </div>
+        <div id="Ejercicio7">
+            <h2 class="subtitulo">Ejercicio 7</h2>
+            <section>
+                <h3>
+                    Mostrar el costo a pagar por una llamada telefónica, según la zona y
+                    la duración en minutos
+                </h3>
+                <a href="#EJercicio7" id="boton7" class="btn">¡Ejecuta ejercicio7!</a>
+                <p>Escoja la clave hacia donde llama</p>
+                <p>(1) - 0.15$ - Estados Unidos </p>
+                <p>(2) - 0.14$ -Canada</p>
+                <p>(3) - 0.25$ -España</p>
+                <p>(4) - 0.05$ -Colombia</p>
+                <p>(5) - 0.10$ -Venezuela</p>
+                <p>(6) - 0.11$ -Mexico</p>
+                <p>(7) - 0.12$ -Argentina</p>
+                <p>(8) - 0.08$ -Panama</p>
+                <p>¿Cuantos minutos duro la llamada?</p>
+                <p id="clave"></p>
+                <p id="totalPagar"></p>
+            </section>
+            <script src="/JS/ejercicio7.js"></script>
+        </div>
+        <div id="Ejercicio8">
+            <h2 class="subtitulo">Ejercicio 8</h2>
+            <section>
+                <h3>
+                    Realizar un programa que clasifiqué a partir de la nota si un
+                    estudiante está en alguno de estos criterios: De 0-2 : Necesita Reforzamiento; 3-4:
+                    Desaprobado; 5-7: Aprobado; 8-9: Excelente y 10: BECADO
+                </h3>
+                <a href="#EJercicio8" id="boton8" class="btn">¡Ejecuta ejercicio8!</a>
+                <p id="nombre">Nombre: </p>
+                <p id="nota">Nota: </p>
+                <p id="resultado">Resultado: </p>
+            </section>
+            <script src="/JS/ejercicio8.js"></script>
+        </div>
+        <div id="Ejercicio9">
+            <h2 class="subtitulo">Ejercicio 9</h2>
+            <section>
+                <h3>La suma de n números naturales, donde n es el numero limite que
+                    ingresa el usuario.
+                </h3>
+                <a href="#EJercicio9" id="boton9" class="btn">¡Ejecuta ejercicio9!</a>
+                <p id="numero">Numero limite: </p>
+                <p id="sumaN">La suma es: </p>
+
+            </section>
+            <script src="/JS/ejercicio9.js"></script>
+        </div>
+        <div id="Ejercicio10">
+            <h2 class="subtitulo">Ejercicio 10</h2>
+            <section>
+                <h3>La suma de n números naturales, donde n es el numero limite que
+                    ingresa el usuario.
+                </h3>
+                <a href="#EJercicio10" id="boton10" class="btn">¡Ejecuta ejercicio10!</a>
+                <p id="numero10">Numero limite: </p>
+                <p id="sumaN10">La suma es: </p>
+
+            </section>
+            <script src="/JS/ejercicio10.js"></script>
         </div>
     </div>
 </body>
