--- a/HTML/Pagina2.html
+++ b/HTML/Pagina2.html
@@ -11,7 +11,7 @@
         <nav class="menu">
             <a href="../Index.html">Pagina 1</a>
             <a href="/HTML/Pagina2.html">Pagina 2</a>
-            <a href="#">Pagina 3</a>
+            <a href="/HTML/Pagina3.html">Pagina 3</a>
             <a href="#">Pagina 4</a>
             <a href="#">Pagina 5</a>
             <a href="#">Pagina 6</a>
@@ -99,6 +99,21 @@
 
             </section>
             <script src="/JS/ejercicio10.js"></script>
+        </div>
+        <div id="Ejercicio11">
+            <h2 class="subtitulo">Ejercicio 11</h2>
+            <section>
+                <h3>Identificar mediante un programa si es año bisiesto y si la fecha es
+                    correcta.
+                    Resolución:
+                </h3>
+                <a href="#EJercicio11" id="boton11" class="btn">¡Ejecuta ejercicio11!</a>
+                <p id="bisiesto">Dia: </p>
+                <p id="fecha">Mes:</p>
+                <p id="error">Año:</p>
+
+            </section>
+            <script src="/JS/ejercicio11.js"></script>
         </div>
     </div>
 </body>
