--- a/HTML/Pagina3.html
+++ b/HTML/Pagina3.html
@@ -61,6 +61,37 @@
             </section>
             <script src="/JS/ejercicio1.13.js"></script>
         </div>
+        <div id="Ejercicio14">
+            <h2 class="subtitulo">Ejercicio 14</h2>
+            <section>
+                <h3>
+                    Se pide ingresar el sueldo de un trabajador y su categoría, dependiendo de la
+                    categoría se le dará una bonificación en el neto a pagar.
+                    Bonificación por categoría: A = 10%; B = 20%; C = 30%; D = 50%
+                </h3>
+                <a href="#Ejercicio14" id="boton14" class="btn">¡Ejecuta ejercicio14!</a>
+                <p>(1) = Categoría A</p>
+                <p>(2) = Categoría B</p>
+                <p>(3) = Categoría C</p>
+                <p>(4) = Categoría D</p>
+                <p id="sueldo1">EL sueldo es: </p>
+                <p id="bonificacion">Su sueldo con bonificacion es de:</p>
+            </section>
+            <script src="/JS/ejercicio1.14.js"></script>
+        </div>
+        <div id="Ejercicio15">
+            <h2 class="subtitulo">Ejercicio 15</h2>
+            <section>
+                <h3>
+                    Elaborar un programa que permita ingresar 10 número enteros y muestre la
+                    cantidad de números pares e impares ingresados.
+                </h3>
+                <a href="#Ejercicio15" id="boton15" class="btn">¡Ejecuta ejercicio15!</a>
+                <p id="pares">Pares ingresados son: </p>
+                <p id="impares">Impares ingresados son: </p>
+            </section>
+            <script src="/JS/ejercicio1.15.js"></script>
+        </div>
 
 
     </div>
