--- a/HTML/Pagina4.html
+++ b/HTML/Pagina4.html
@@ -87,10 +87,10 @@
                     palindromono.
                 </h3>
                 <a href="#Ejercicio20" id="boton20" class="btn">¡Ejecuta Ejercicio20!</a>
-                <p id=""></p>
-                <p id=""> </p>
+                <p id="polindromo"></p>
+                <p id="error"> </p>
             </section>
-            <script src=""></script>
+            <script src="/JS/ejercicio1.20.js"></script>
         </div>
 
         <div id="Ejercicio21">
@@ -100,10 +100,11 @@
                     Comprobar que un numero de 4 y de 5 dígitos es palíndromo
 
                 </h3>
-                <a href="#Ejercicio21" id="boton21" class="btn">¡Ejecuta Ejercicio20!</a>
-                
+                <a href="#Ejercicio21" id="boton21" class="btn">¡Ejecuta Ejercicio21!</a>
+                <p id="polindromo1"></p>
+                <p id="error1"></p>
             </section>
-            <script src=""></script>
+            <script src="/JS/ejercicio1.21.js"></script>
         </div>
     </div>
 </body>
