--- a/HTML/Pagina2.html
+++ b/HTML/Pagina2.html
@@ -12,10 +12,8 @@
             <a href="../Index.html">Pagina 1</a>
             <a href="/HTML/Pagina2.html">Pagina 2</a>
             <a href="/HTML/Pagina3.html">Pagina 3</a>
-            <a href="#">Pagina 4</a>
-            <a href="#">Pagina 5</a>
-            <a href="#">Pagina 6</a>
-            <a href="#">pagina 7</a>
+            <a href="/HTML/Pagina4.html">Pagina 4</a>
+            <a href="/HTML/Pagina5.html">Pagina 5</a>
         </nav>
         <section class="inicio-contenedor contenedor">
             <h1 class="inicio-titulo">FUNDAMENTOS DE PROGRAMACION JAVA SCRIPT</h1>
