--- a/HTML/Pagina4.html
+++ b/HTML/Pagina4.html
@@ -13,9 +13,7 @@
             <a href="/HTML/Pagina2.html">Pagina 2</a>
             <a href="/HTML/Pagina3.html">Pagina 3</a>
             <a href="/HTML/Pagina4.html">Pagina 4</a>
-            <a href="#">Pagina 5</a>
-            <a href="#">Pagina 6</a>
-            <a href="#">pagina 7</a>
+            <a href="/HTML/Pagina5.html">Pagina 5</a>
         </nav>
         <section class="inicio-contenedor contenedor">
             <h1 class="inicio-titulo">EJERCICIOS PROPUESTOS JAVA SCRIPT</h1>
@@ -74,7 +72,7 @@
                 </h3>
                 <a href="#Ejercicio19" id="boton19" class="btn">¡Ejecuta Ejercicio19!</a>
                 <p id="ascendente"></p>
-                <p id="descendente">EL numero mayor de los 10 es: </p>
+                <p id="descendente"></p>
             </section>
             <script src="/JS/ejercicio1.19.js"></script>
         </div>
@@ -87,7 +85,9 @@
                     palindromono.
                 </h3>
                 <a href="#Ejercicio20" id="boton20" class="btn">¡Ejecuta Ejercicio20!</a>
+                <p id="numeror"></p>
                 <p id="polindromo"></p>
+                <p id="nopolindromo"></p>
                 <p id="error"> </p>
             </section>
             <script src="/JS/ejercicio1.20.js"></script>
@@ -101,6 +101,7 @@
 
                 </h3>
                 <a href="#Ejercicio21" id="boton21" class="btn">¡Ejecuta Ejercicio21!</a>
+                <p id="numa"></p>
                 <p id="polindromo1"></p>
                 <p id="error1"></p>
             </section>
