--- a/HTML/Pagina5.html
+++ b/HTML/Pagina5.html
@@ -27,16 +27,128 @@
                 <h3>
                     REALIZAR UN PROGRAMA QUE MUESTRE LA SERIE DE FIBONACCI CON
                     NÚMEROS MENORES AL X200 ES DECIR X 200
-                </h3> <a href="#Ejercicio1" id="boton1" class="btn">
-                    ¡Ejecuta ejercicio1!</a>
-                <p id="num">Numero Ingresado:</p>
-                <p id="pares">La suma de los pares es: </p>
-                <p id="impares">La suma de los imapres es: </p>
+                </h3> <a href="#Ejercicio1" id="boton1" class="btn">¡Ejecuta ejercicio1!</a>
+                <p id="serie"></p>
             </section>
             <script src=""></script>
         </div>
 
-      
+        <div id="Ejercicio2">
+            <h2 class="subtitulo">Ejercicio 2</h2>
+            <section>
+                <h3>
+                    HACER UN ALGORITMO QUE NOS CALCULE LA SUMA DE LOS N PRIMEROS
+                    NÚMEROS PARES SIGUIENTES AL NÚMERO. ES DECIR; SI INSERTAMOS UN
+                    5, NOS HAGA LA SUMA DE 6+8+10+12+14.
+                </h3> <a href="#Ejercicio2" id="boton2" class="btn">¡Ejecuta Ejercicio2!</a>
+                <p id="serie2"></p>
+            </section>
+            <script src="/JS/ejercicio22.js"></script>
+        </div>
+
+        <div id="Ejercicio3">
+            <h2 class="subtitulo">Ejercicio 3</h2>
+            <section>
+                <h3>
+                    DIGITALIZAR UN ALGORITMO QUE VIZUALICE LA CUENTA DE LOS
+                    NÚMEROS QUE SON MÚLTIPLOS DE 2 O 3 QUE HAY ENTRE 1 Y 100.
+                </h3> <a href="#Ejercicio3" id="boton3" class="btn">¡Ejecuta Ejercicio3!</a>
+
+            </section>
+            <script src="/JS/ejercicio23.js"></script>
+        </div>
+
+        <div id="Ejercicio4">
+            <h2 class="subtitulo">Ejercicio 4</h2>
+            <section>
+                <h3>
+                    ELABORAR UN PROGRAMA QUE INGRESE 3 NÚMEROS Y MUESTRE EL
+                    NÚMERO INTERMEDIO
+                </h3> <a href="#Ejercicio4" id="boton4" class="btn">¡Ejecuta Ejercicio4!</a>
+                <p id="n1">NUmero 1</p>
+                <p id="n2">Numero 2</p>
+                <p id="n3">NUmero 3</p>
+                <p id="mitad"></p>
+            </section>
+            <script src="/JS/ejercicio24.js"></script>
+        </div>
+        <div id="Ejercicio5">
+            <h2 class="subtitulo">Ejercicio 5</h2>
+            <section>
+                <h3>
+                    MOSTRAR EL COSTO A PAGAR POR UNA LLAMADA TELEFÓNICA, SEGÚN
+                    LA ZONA DE DESTINO Y LA DURACIÓN EN MINUTOS CON SUS
+                    RESPECTIVAS RESTRICCIONES
+                </h3> <a href="#Ejercicio5" id="boton5" class="btn">¡Ejecuta Ejercicio5!</a>
+
+                <p>
+                    [1] ESTADOS UNIDOS <br>
+                    [2] Canada <br>
+                    [3] America del sur <br>
+                    [4] America Central <br>
+                    [5] Mexico <br>
+                    [6] Europa <br>
+                    [7] Asia <br>
+                    [8] Africa <br>
+                    [9] Oceania
+                </p>
+                <p id="tiempo"></p>
+                <p id="costo"></p>
+                <p id="zona"></p>
+                <p id="total"></p>
+            </section>
+            <script src="/JS/ejercicio25.js"></script>
+        </div>
+        <div id="Ejercicio6">
+            <h2 class="subtitulo">Ejercicio 6</h2>
+            <section>
+                <h3>
+                    HACER UN ALGORITMO QUE MUESTRE EL PROMEDIO DE VARIAS NOTAS
+                    O DE N NOTAS INGRESADAS, SE DEBE DEFINIR EL VALOR DE N PARA
+                    CONOCER LA CANTIDAD DE NOTAS A INGRESAR
+                </h3> <a href="#Ejercicio6" id="boton6" class="btn">¡Ejecuta Ejercicio6!</a>
+                <p id="promedio">Promedio </p>
+            </section>
+            <script src="/JS/ejercicio26.js"></script>
+        </div>
+        <div id="Ejercicio7">
+            <h2 class="subtitulo">Ejercicio 7</h2>
+            <section>
+                <h3>
+                    REALIZAR UN PROGRAMA QUE VERIFIQUE QUE UN NUMERO
+                    CUALQUIERA ES PALINDROMO O NO.
+
+                </h3> <a href="#Ejercicio7" id="boton7" class="btn">¡Ejecuta Ejercicio7!</a>
+                <p id="invertido">Numero:</p>
+                <p id="polindromo">polindromo</p>
+
+            </section>
+            <script src="/JS/ejercicio27.js"></script>
+        </div>
+        <div id="Ejercicio8">
+            <h2 class="subtitulo">Ejercicio 8</h2>
+            <section>
+                <h3>
+                    REALIZAR UN PROGRAMA QUE MUESTRE LA SIGUIENTE SERIE
+                    NUMERICA GRAFICA:
+                </h3>
+                <p>Serie</p>
+            </section>
+            <script src="/JS/ejercicio28.js"></script>
+        </div>
+
+        <div id="Ejercicio9">
+            <h2 class="subtitulo">Ejercicio 9</h2>
+            <section>
+                <h3>
+                    REALIZAR UN PROGRAMA QUE MUESTRE LA SIGUIENTE SERIE GRAFICA:
+                    EJEMPLO:
+                </h3>
+                <p>Serie</p>
+            </section>
+            <script src="/JS/ejercicio29.js"></script>
+        </div>
+
     </div>
 </body>
 
