--- a/HTML/Pagina5.html
+++ b/HTML/Pagina5.html
@@ -30,7 +30,7 @@
                 </h3> <a href="#Ejercicio1" id="boton1" class="btn">¡Ejecuta ejercicio1!</a>
                 <p id="serie"></p>
             </section>
-            <script src=""></script>
+            <script src="/JS/ejercicio21.js"></script>
         </div>
 
         <div id="Ejercicio2">
